# HttpServer-RP2040

./: README.md  library.json  platformio.ini
configs/: Rp2040Eth.h  W5500EvbPico.h
configuration/: Rp2040Eth.h  W5500EvbPico.h
examples/: authentication.cpp  customHandler.cpp  httpServer.cpp
include/: CH9120.h  Configuration.h  DeviceModel.h  Helper.h  HttpHandler.h  HttpParser.h  HttpServer.h  Utils.h  iot_configs.h  trust_anchors.h
include/CH9120/: CH9120.h  CH9120Server.h
include/W5500/: W5500Server.h
port/: CMakeLists.txt
port/ioLibrary_Driver/src/: w5x00_spi.c  wiznet_spi_pio.c
src/: CH9120.cpp  Configuration.cpp  Helper.cpp  HttpParser.cpp  HttpResponse.cpp  HttpServer.cpp  SerialLogger.cpp  Utils.cpp  main.cpp
src/CH9120/: C9120Server.cpp  CH9120.cpp
src/W5500/: W5500Server.cpp
